--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -18,8 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  /*font-family: Arial, Helvetica, sans-serif;*/
-  font-family: 'Playfair Display', serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
