added custom fonts and cute game

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-silkscreen: 'silkscreen', cursive;
+  --font-sixtyfour: 'sixtyfour', sans-serif;
+  --font-raleway: 'raleway', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,7 +20,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-silkscreen), var(--font-sixtyfour), Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
